src/objects/Service_Assignment__c.object
<CustomObject>
    <fields>
        <fullName>Prior_Location_State__c</fullName>
        <description>state of location at time of referral - MN brain injury details</description>
        <label>Prior Location State</label>
        <picklist>
            <picklistValues>
                <fullName>Alabama</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alaska</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arizona</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arkansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>California</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colorado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connecticut</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delaware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>District of Columbia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Florida</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Georgia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hawaii</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Idaho</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Illinois</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Iowa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kentucky</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Louisiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maryland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Massachusetts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Michigan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minnesota</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mississippi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missouri</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Montana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nebraska</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nevada</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Prior_Location_Street_1__c</fullName>
        <description>Street address for location at time of referral - for MN brain injury</description>
        <label>Prior Location Street 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prior_Location_Street_2__c</fullName>
        <description>street address of location at time of referral - MN brain injury details</description>
        <label>Prior Location Street 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prior_Location_Zip__c</fullName>
        <description>ZIP of location at time of referral - MN brain injury detail</description>
        <label>Prior Location Zip</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Code__c</fullName>
        <label>Program Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Detail__c</fullName>
        <label>Program Detail</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <label>Program</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Projected_Treatment_End_Date__c</fullName>
        <inlineHelpText>This field is only required when associating Document types of Case and or Fidelity with a Service Assignment.</inlineHelpText>
        <label>Projected Treatment End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rancho_Score__c</fullName>
        <label>Rancho Score</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ref_Referring_Physician__c</fullName>
        <description>Referring physician at time of referral - MN brain injury details</description>
        <label>Ref Referring Physician</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referral_Est_Discharge_Date__c</fullName>
        <description>Estimated discharge date for referral - MN brain injury details</description>
        <label>Referral Est Discharge Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Referral__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Reference to referral that converted to this service assignment</description>
        <label>Referral</label>
        <referenceTo>Referral__c</referenceTo>
        <relationshipLabel>Service Assignment</relationshipLabel>
        <relationshipName>Service_Assignment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SA_Closure_Status__c</fullName>
        <label>SA Closure Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SA_Hidden__c</fullName>
        <label>SA # (Hidden)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SA_Start_DateTime__c</fullName>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Service_Assignment_Closure_Count__c</fullName>
        <description>A field that sums the number of child Service Assignment Closure records for the Service Assignment, used in a validation rule to insure that no more than one Service Assignment Closure is created per Service Assignment.</description>
        <label>Service Assignment Closure Count</label>
        <summaryForeignKey>Service_Assignment_Closure__c.Service_Assignment__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Service_Assignment_Number__c</fullName>
        <displayFormat>SA - {000000}</displayFormat>
        <label>Service Assignment Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Service_Began_via_Acquisition_Company__c</fullName>
        <inlineHelpText>This person&apos;s service is beginning because the company providing their services was purchased by The MENTOR Network after 2016</inlineHelpText>
        <label>Service Began via Acquisition Company</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Service_Ended_via_Business_Divested__c</fullName>
        <label>Service Ended via Business Divested?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Service_Line__c</fullName>
        <label>Service Line</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Location where service is being performed</description>
        <label>Service Location</label>
        <referenceTo>Service_Location__c</referenceTo>
        <relationshipLabel>Service Assignment</relationshipLabel>
        <relationshipName>Service_Assignment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Requested__c</fullName>
        <label>Services Requested</label>
        <picklist>
            <picklistValues>
                <fullName>Basic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Basic+Transportation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complex+Transportation</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Specify_Error__c</fullName>
        <description>Only Displayed when created in Error Is Selected</description>
        <label>Specify Error</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Specify_Other__c</fullName>
        <label>Specify Other</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Service Assignment Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Created in Error</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_no_of_Internal_moves_during_Servic__c</fullName>
        <label>Total no of Internal moves during Servic</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10+</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Was_Child_Service_or_Permanency_Goal_met__c</fullName>
        <label>Was Child Service or Permanency Goal met</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Was_dissatisfaction_reason_for_service_e__c</fullName>
        <label>Was disatsfctin rson for service ending?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Was_this_transfer_frm_another_ServAssig__c</fullName>
        <label>Was this transfer frm another ServAssig?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Who_was_dissatisfied__c</fullName>
        <label>Who was dissatisfied?</label>
        <picklist>
            <picklistValues>
                <fullName>Person Being Served</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Funder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guardian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referral Source</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>pbsFirstName__c</fullName>
        <formula>Person_Being_Served__r.FirstName</formula>
        <label>pbsFirstName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pbsID__c</fullName>
        <description>PBS#</description>
        <formula>Person_Being_Served__r.PBS_Identifier__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Person#</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pbsLastName__c</fullName>
        <formula>Person_Being_Served__r.LastName</formula>
        <label>pbsLastName</label>
        <type>Text</type>
    </fields>
    <label>Service Assignment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Program_Code__c</columns>
        <columns>Program_Detail__c</columns>
        <columns>Program__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>End_Date__c</columns>
        <columns>Start_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Assessment_Only_Service_Assignments</fullName>
        <columns>NAME</columns>
        <columns>Admission__c</columns>
        <columns>Person_Being_Served__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Service_Assignment__c.Assessment_Only</value>
        </filters>
        <label>Assessment Only Service Assignments</label>
    </listViews>
    <nameField>
        <label>Service Assignment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Service Assignment</pluralLabel>
    <recordTypes>
        <fullName>Assessment_Only</fullName>
        <active>true</active>
        <description>This option is for Assessment Only Service Assignments. There will be no Plan/STGs.</description>
        <label>Assessment Only</label>
    </recordTypes>
    <recordTypes>
        <fullName>Standard_Service_Assignment</fullName>
        <active>true</active>
        <description>This option is for any standard service assignment</description>
        <label>Standard Service Assignment</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Do_not_Allow_Active_SA_if_CreatedInError</fullName>
        <active>true</active>
        <errorConditionFormula>AND(text(Admission__r.Status__c)=&quot;Created In Error&quot;, text(Status__c)=&quot;Active&quot;, NOT(CONTAINS($User.Username,&apos;integration@thementornetwork.com&apos;)))</errorConditionFormula>
        <errorMessage>Service Assignments cannot be saved as Active when their Admission is set to Created In Error.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Do_not_Allow_InActive_SA_if_CrInError</fullName>
        <active>true</active>
        <errorConditionFormula>AND(text(Admission__r.Status__c)=&quot;Created In Error&quot;, text(Status__c)=&quot;Inactive&quot;, NOT(CONTAINS($User.Username,&apos;integration@thementornetwork.com&apos;)))</errorConditionFormula>
        <errorMessage>Service Assignments cannot be saved as Inactive when their Admission is set to Created In Error.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Do_not_allow_Active_SA_if_Discharged</fullName>
        <active>true</active>
        <errorConditionFormula>AND(text(Admission__r.Status__c)=&quot;Discharged&quot;, text(Status__c)=&quot;Active&quot;, NOT(CONTAINS($User.Username,&apos;integration@thementornetwork.com&apos;)))</errorConditionFormula>
        <errorMessage>Service Assignments cannot be saved as Active when their Admission is set to Discharged.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Prevent_End_Date_Save_If_Active</fullName>
        <active>true</active>
        <description>A validation rule to prevent the saving of an end date for a service assignment if the status field is set to &apos;Active.&apos;</description>
        <errorConditionFormula>ISPICKVAL( Status__c , &apos;Active&apos;)  &amp;&amp;   NOT ISNULL( End_Date__c )&amp;&amp; NOT(CONTAINS($User.Username,&apos;integration@thementornetwork.com&apos;))</errorConditionFormula>
        <errorMessage>A Service Assignment with status Active cannot be saved with an End Date.  Please review the data and adjust accordingly.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Prevent_Inactive_without_End_Date</fullName>
        <active>true</active>
        <errorConditionFormula>TEXT(Status__c) = &apos;Inactive&apos; &amp;&amp; ISBLANK(End_Date__c)&amp;&amp; NOT(CONTAINS($User.Username,&apos;integration@thementornetwork.com&apos;))</errorConditionFormula>
        <errorMessage>Service Assignment Cannot be Inactivated without End Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SA_Dates_Within_ADM_Range</fullName>
        <active>true</active>
        <description>A validation rule to ensure that the service assignment start and end dates are within the admission&apos;s date range (account for NULL Admission End Date, etc.). 
PRI-161 removed the check for Start_Date__c see rule &apos;Start_Date_before_Admin_Effective_Date&apos;</description>
        <errorConditionFormula>(( End_Date__c &lt;  Admission__r.Effective_Date__c) || ( Start_Date__c &gt;  Admission__r.Discharged_Date__c ) || ( End_Date__c &gt;  Admission__r.Discharged_Date__c))&amp;&amp; NOT(CONTAINS($User.Username,&apos;integration@thementornetwork.com&apos;))</errorConditionFormula>
        <errorMessage>The date range specified for a service assignment must be completely contained within the date range for the associated admission.  Please check the Effective Date and Discharge Date data for this admission, and adjust accordingly.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SA_Start_Date_Not_Before_SA_End_Date</fullName>
        <active>true</active>
        <description>A validation rule to prevent entry of a service assignment end date that is before the service assignment start ddate.</description>
        <errorConditionFormula>End_Date__c  &lt; Start_Date__c &amp;&amp;  NOT(CONTAINS($User.Username,&apos;integration@thementornetwork.com&apos;))</errorConditionFormula>
        <errorMessage>The End Date for the Service Assignment must be on or after the Start Date for that Service Assignment.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ServiceAssignment_status_cant_be_OnHold</fullName>
        <active>true</active>
        <description>Validation fires for records where Service Assignment Status is set to On-Hold</description>
        <errorConditionFormula>ISPICKVAL(Status__c, &quot;On-Hold&quot;) &amp;&amp; NOT(CONTAINS($User.Username,&apos;integration@thementornetwork.com&apos;))</errorConditionFormula>
        <errorMessage>Service Assignment Status cannot be On-Hold.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Start_Date_before_Admin_Effective_Date</fullName>
        <active>true</active>
        <errorConditionFormula>((Start_Date__c &lt;  Admission__r.Effective_Date__c) || ( SA_Start_DateTime__c &lt;  Admission__r.Admission_Effective_DateTime__c )) &amp;&amp; NOT(CONTAINS($User.Username,&apos;integration@thementornetwork.com&apos;))</errorConditionFormula>
        <errorDisplayField>Start_Date__c</errorDisplayField>
        <errorMessage>The Start Date cannot be before the Admission Date</errorMessage>
    </validationRules>
</CustomObject>